--- a/jdbc-postgresql/pom.xml
+++ b/jdbc-postgresql/pom.xml
@@ -37,5 +37,17 @@
             <version>1.0.0p1m2l</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.arjuna.databroker</groupId>
+            <artifactId>metadata-common</artifactId>
+            <version>1.0.0p1m2l</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.arjuna.databroker</groupId>
+            <artifactId>metadata-rdf</artifactId>
+            <version>1.0.0p1m2l</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
