Switch to 'com.arjuna.dbutils:generator-jdbc'

--- a/jdbc-postgresql/pom.xml
+++ b/jdbc-postgresql/pom.xml
@@ -49,5 +49,11 @@
             <version>1.0.0p1m2l</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.arjuna.dbutils</groupId>
+            <artifactId>generator-jdbc</artifactId>
+            <version>1.0.0p1m1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
