--- a/jdbc-postgresql/pom.xml
+++ b/jdbc-postgresql/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>com.arjuna.dbutils</groupId>
-            <artifactId>generator-jdbc</artifactId>
+            <artifactId>metadata-utils-jdbc</artifactId>
             <version>1.0.0p1m1</version>
             <scope>provided</scope>
         </dependency>
