Updated version of DataBroker

--- a/jdbc-postgresql/pom.xml
+++ b/jdbc-postgresql/pom.xml
@@ -28,30 +28,30 @@
         <dependency>
             <groupId>com.arjuna.databroker</groupId>
             <artifactId>data-common</artifactId>
-            <version>1.0.0p1m2l</version>
+            <version>${version.com.arjuna.databroker}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.arjuna.databroker</groupId>
             <artifactId>data-common-jee</artifactId>
-            <version>1.0.0p1m2l</version>
+            <version>${version.com.arjuna.databroker}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.arjuna.databroker</groupId>
             <artifactId>metadata-common</artifactId>
-            <version>1.0.0p1m2l</version>
+            <version>${version.com.arjuna.databroker}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.arjuna.databroker</groupId>
             <artifactId>metadata-rdf</artifactId>
-            <version>1.0.0p1m2l</version>
+            <version>${version.com.arjuna.databroker}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.arjuna.dbutils</groupId>
-            <artifactId>generator-jdbc</artifactId>
+            <groupId>com.arjuna.dbutils.metadata</groupId>
+            <artifactId>metadata-utils-jdbc</artifactId>
             <version>1.0.0p1m1</version>
             <scope>provided</scope>
         </dependency>
